baml_language/crates/baml_tests/snapshots/compiles/parser_expressions/baml_tests__compiles__parser_expressions__02_parser__binary_ops.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "Calculate"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            PATTERN_ALT "let a"
              KW_LET "let"
              WORD "a"
          EQUALS "="
          BINARY_EXPR "1 + 2"
            INTEGER_LITERAL "1"
            PLUS "+"
            INTEGER_LITERAL "2"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            PATTERN_ALT "let b"
              KW_LET "let"
              WORD "b"
          EQUALS "="
          BINARY_EXPR "a * 3"
            WORD "a"
            STAR "*"
            INTEGER_LITERAL "3"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            PATTERN_ALT "let c"
              KW_LET "let"
              WORD "c"
          EQUALS "="
          BINARY_EXPR
            BINARY_EXPR "b / 2"
              WORD "b"
              SLASH "/"
              INTEGER_LITERAL "2"
            MINUS "-"
            INTEGER_LITERAL "1"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            PATTERN_ALT "let d"
              KW_LET "let"
              WORD "d"
          EQUALS "="
          BINARY_EXPR
            PAREN_EXPR
              L_PAREN "("
              BINARY_EXPR "a + b"
                WORD "a"
                PLUS "+"
                WORD "b"
              R_PAREN ")"
            STAR "*"
            WORD "c"
          SEMICOLON ";"
        RETURN_STMT "return d;"
          KW_RETURN "return"
          WORD "d"
          SEMICOLON ";"
        R_BRACE "}"

=== ERRORS ===
None
