baml_language/crates/baml_tests/snapshots/compiles/parser_expressions/baml_tests__compiles__parser_expressions__02_parser__field_access.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "FieldAccess"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "user"
        COLON ":"
        TYPE_EXPR "User"
          WORD "User"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            PATTERN_ALT "// Simple field access
  let name"
              KW_LET "let"
              WORD "name"
          EQUALS "="
          PATH_EXPR "user.name"
            WORD "user"
            DOT "."
            WORD "name"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            PATTERN_ALT "// Nested field access
  let bio"
              KW_LET "let"
              WORD "bio"
          EQUALS "="
          PATH_EXPR "user.profile.bio"
            WORD "user"
            DOT "."
            WORD "profile"
            DOT "."
            WORD "bio"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            PATTERN_ALT "// Deep nesting
  let theme"
              KW_LET "let"
              WORD "theme"
          EQUALS "="
          PATH_EXPR "user.profile.settings.theme"
            WORD "user"
            DOT "."
            WORD "profile"
            DOT "."
            WORD "settings"
            DOT "."
            WORD "theme"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            PATTERN_ALT "// Field access then array index
  let firstTag"
              KW_LET "let"
              WORD "firstTag"
          EQUALS "="
          INDEX_EXPR
            PATH_EXPR "user.tags"
              WORD "user"
              DOT "."
              WORD "tags"
            L_BRACKET "["
            INTEGER_LITERAL "0"
            R_BRACKET "]"
          SEMICOLON ";"
        RETURN_STMT "return theme;"
          KW_RETURN "return"
          WORD "theme"
          SEMICOLON ";"
        R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "User"
    L_BRACE "{"
    FIELD
      WORD "name"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "profile"
      TYPE_EXPR "Profile"
        WORD "Profile"
    FIELD
      WORD "tags"
      TYPE_EXPR "string[]"
        WORD "string"
        L_BRACKET "["
        R_BRACKET "]"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Profile"
    L_BRACE "{"
    FIELD
      WORD "bio"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "settings"
      TYPE_EXPR "Settings"
        WORD "Settings"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Settings"
    L_BRACE "{"
    FIELD
      WORD "theme"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"

=== ERRORS ===
None
