baml_language/crates/baml_tests/snapshots/compiles/parser_expressions/baml_tests__compiles__parser_expressions__02_parser__precedence.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "TestPrecedence"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "bool"
      WORD "bool"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            PATTERN_ALT "// Multiplication before addition
  let a"
              KW_LET "let"
              WORD "a"
          EQUALS "="
          BINARY_EXPR
            INTEGER_LITERAL "2"
            PLUS "+"
            BINARY_EXPR "3 * 4"
              INTEGER_LITERAL "3"
              STAR "*"
              INTEGER_LITERAL "4"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            PATTERN_ALT "// Should be 14, not 20
  let c"
              KW_LET "let"
              WORD "c"
          EQUALS "="
          BINARY_EXPR
            BINARY_EXPR "2 * 3"
              INTEGER_LITERAL "2"
              STAR "*"
              INTEGER_LITERAL "3"
            PLUS "+"
            INTEGER_LITERAL "4"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            PATTERN_ALT "// Should be 10, not 14

  // Comparison after arithmetic
  let b"
              KW_LET "let"
              WORD "b"
          EQUALS "="
          BINARY_EXPR
            WORD "a"
            GREATER ">"
            BINARY_EXPR "10 + 2"
              INTEGER_LITERAL "10"
              PLUS "+"
              INTEGER_LITERAL "2"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            PATTERN_ALT "// Should be a > 12

  // Logical operators
  let d"
              KW_LET "let"
              WORD "d"
          EQUALS "="
          BINARY_EXPR
            WORD "true"
            OR_OR "||"
            BINARY_EXPR "false && false"
              WORD "false"
              AND_AND "&&"
              WORD "false"
          SEMICOLON ";"
        RETURN_STMT "// Should be true (AND before OR)

  return d;"
          KW_RETURN "return"
          WORD "d"
          SEMICOLON ";"
        R_BRACE "}"

=== ERRORS ===
None
